# gitlab-mcp-server

./: .gitignore  README.md  pyproject.toml
src/gitlab_mcp/: __init__.py
